Hide overflow of html element to prevent scrollbar in iframes

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,10 @@
     touch-action: none;
 }
 
+html {
+    overflow: hidden;
+}
+
 /* Get rid of any margins, set background black, use flexbox to center */
 html, body {
     margin: 0;
@@ -28,6 +32,20 @@ html, body {
     font-size: 14px;
     font-family: luminari, Georgia;
     image-rendering: pixelated;
+}
+
+#board {
+    width: 1600px;
+    height: 900px;
+    outline: 0;
+    position: relative;
+    display: flex;
+    touch-action: manipulation;
+    user-select: none;
+    background: url('b.png');
+    background-repeat: repeat;
+    background-size: 66%;
+    overflow: hidden;
 }
 
 .hide {
@@ -122,20 +140,6 @@ button:active:not(:disabled) {
 
 #title {
     z-index: 2;
-}
-
-#board {
-    width: 1600px;
-    height: 900px;
-    outline: 0;
-    position: relative;
-    display: flex;
-    touch-action: manipulation;
-    user-select: none;
-    background: url('b.png');
-    background-repeat: repeat;
-    background-size: 66%;
-    overflow: hidden;
 }
 
 #menubuttons {
